03-nginx-ingress-controller/example/deploy-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-mvc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-mvc
  template:
    metadata:
      labels:
        app: dotnet-mvc
    spec:
      containers:
      - name: dotnet-mvc
        image: funf/dotnet-core-mvc:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-mvc-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: dotnet-mvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-api
  template:
    metadata:
      labels:
        app: dotnet-api
    spec:
      containers:
      - name: dotnet-api
        image: funf/dotnet-core-webapi:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-api-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: dotnet-api
