03-nginx-ingress-controller/example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dotnet-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - dotnet.example.com
    secretName: dotnet-secret
  rules:
  - host: dotnet.example.com
    http:
      paths:
      - path: /*(/|$)(.*)
        backend:
          serviceName: dotnet-mvc-svc
          servicePort: 80
      - path: /api(/|$)(.*)
        backend:
          serviceName: dotnet-api-svc
          servicePort: 80
